# siclib_main

./: CMakeLists.txt  Cargo.toml  build.rs  license.md  readme.md  siclibhs.cabal
.github/workflows/: Build and Tests.yml
scripts/: debug.sh  test.sh
src/: lib.rs
src/Siclibhs/: Lib.hs  Main.hs
src/collections/: vector.rs
src/siclibcpp/: common.hpp  containers.hpp  math.hpp  memory.hpp  siclibcpp.hpp
src/siclibcpp/containers/: array.hpp  container.hpp  list.hpp  stack.hpp  vector.hpp  vector_mut.hpp
src/siclibcpp/math/: base.cpp  base.hpp
src/siclibcpp/memory/: base.hpp
src/siclibhs/: Lib.hs  Main.hs  MyLib.hs
src/siclibrs/: lib.rs
src/siclibrs/collections/: list.rs  list_double.rs  list_imm.rs  mod.rs  small_vector.rs  vector.rs
src/siclibrs/linalg/: mod.rs  tensor.rs
tests/: integration_test.rs
tests/siclibcpp/: common.hpp  main.cpp
tests/siclibcpp/containers/: array.cpp  stack.cpp  vector.cpp
tests/siclibcpp/math/: base.cpp
tests/siclibcpp/memory/: base.cpp
tests/siclibrs/: main_test.rs
