[package]
name = "siclibrs"
version = "0.1.0"
authors = ["Shameek Conyers sic@usf.edu"]
edition = "2021"
description = "A Rust/C++ general use library."
readme = "readme.md"
homepage = "https://github.com/ShameekConyers/siclib"
repository = "https://github.com/ShameekConyers/siclib"
license-file = "license.md"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/siclibrs/lib.rs"

[profile.test]
opt-level = 0
debug = true
split-debuginfo = "packed"  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false


[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[[test]]
name = "libtests"
path = "tests/siclibrs/main_test.rs"
