cabal-version:      3.0
name:               siclibhs
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Shameek Conyers
maintainer:         sic@usf.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    readme.md

library
    exposed-modules:   MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src/siclibhs
    default-language: Haskell2010

executable siclibhs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        siclibhs

    hs-source-dirs:   src/siclibhs
    default-language: Haskell2010

test-suite siclibhs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
